@@ -338,17 +338,12 @@ Server.prototype.connect = function(dbInstance, options, callback) {
         // Only execute callback if we have a caller
         // chained is for findAndModify as it does not respect write concerns
         if(callbackInfo && callbackInfo.callback && callbackInfo.info && Array.isArray(callbackInfo.info.chained)) {
-          // console.log("============================ chained")
-          // console.dir(callbackInfo)
           // Check if callback has already been fired (missing chain command)
           var chained = callbackInfo.info.chained;
           var numberOfFoundCallbacks = 0;
           for(var i = 0; i < chained.length; i++) {
             if(dbInstanceObject._hasHandler(chained[i])) numberOfFoundCallbacks++;
           }
-
-          // console.log("numberOfFoundCallbacks :: " + numberOfFoundCallbacks)
-          // console.log("chained :: " + chained.length)
 
           // If we have already fired then clean up rest of chain and move on
           if(numberOfFoundCallbacks != chained.length) {
@@ -400,9 +395,6 @@ Server.prototype.connect = function(dbInstance, options, callback) {
             // If we have an error let's execute the callback and clean up all other
             // chained commands
             var firstResult = mongoReply && mongoReply.documents;
-
-            // console.log("====================================================== parse")
-            // console.dir(firstResult)
 
             // Check for an error, if we have one let's trigger the callback and clean up
             // The chained callbacks
