@@ -8,6 +8,7 @@
 - Force correct setting of read_secondary based on the read preference (Issue #741)
 - If using read preferences with secondaries queries will not fail if primary is down (Issue #744)
 - noOpen connection for Db.connect removed as not compatible with autodetection of Mongo type
+- Mongos connection with auth not working (Issue #737)
 
 1.1.11 2012-10-10
 -----------------
